<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="br.com.appsaude.ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        android:src="@drawable/logo_vertical_vermelho" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/header_main"
                        android:textAlignment="center"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tip_one"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tip_two"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/tip_three"
                        android:textAlignment="center"
                        android:textSize="15sp" />


                    <Button
                        android:id="@+id/connect"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_blue"
                        android:text="@string/conectar_ao_app"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/alreadyConnect"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/button_blue"
                        android:text="@string/already_connect"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                style="@style/DividerGray"
                android:layout_height="20dp"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>